--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "KampusApp2\\lib\\gson-2.10.1.jar"
-    ]
+    ],
+    "java.project.outputPath": "KampusApp2"
 }
