--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "KampusApp2\\lib\\gson-2.10.1.jar"
+        "KampusApp2\\lib\\gson-2.10.1.jar",
+        "KampusAppAddProdi\\lib\\gson-2.10.1.jar"
     ],
-    "java.project.outputPath": "KampusApp2"
+    "java.project.outputPath": "KampusAppAddProdi\\nothing"
 }
